--- a/frontend/app/src/static/app/notes/noteEditor.html
+++ b/frontend/app/src/static/app/notes/noteEditor.html
@@ -236,6 +236,7 @@
               list-picker-close="closeListPicker()"
               list-picker-clear="closeListPickerAndClearListFromItem(note, list, autoSaveNote)"
               list-picker-get-selected="note.trans.list"
+              list-picker-has-children="hasChildLists"
               list-picker-register-save-new-list-callback="registerSubEditorDoneCallback(saveNewList)"
               list-picker-unregister-save-new-list-callback="unregisterSubEditorDoneCallback()"
               list-picker-register-is-edited-callback="registerHasSubEditorEditedCallback(isEdited)"
