--- a/frontend/app/src/static/app/tasks/taskEditor.html
+++ b/frontend/app/src/static/app/tasks/taskEditor.html
@@ -299,6 +299,7 @@
               list-picker-close="closeListPicker()"
               list-picker-clear="closeListPickerAndClearListFromItem(task, list)"
               list-picker-get-selected="task.trans.list"
+              list-picker-has-children="hasChildLists"
               list-picker-register-save-new-list-callback="registerSubEditorDoneCallback(saveNewList)"
               list-picker-unregister-save-new-list-callback="unregisterSubEditorDoneCallback()"
               list-picker-register-is-edited-callback="registerHasSubEditorEditedCallback(isEdited)"
@@ -330,6 +331,7 @@
               list-picker-close="closeListPicker()"
               list-picker-clear="closeContextPickerAndClearContextFromTask(task, list)"
               list-picker-get-selected="task.trans.context" list-picker-type="context"
+              list-picker-has-children="hasChildTags"
               list-picker-prefix="@"
               list-picker-register-save-new-list-callback="registerSubEditorDoneCallback(saveNewList)"
               list-picker-unregister-save-new-list-callback="unregisterSubEditorDoneCallback()"
