Because for some reason ng-repeat duplicates the first item in item lists causing annoying blips in leave animation, add id:s to repeats and only allow leave animation to those uuid's that have been edited

--- a/frontend/app/src/static/app/focus/focusNotes.html
+++ b/frontend/app/src/static/app/focus/focusNotes.html
@@ -5,7 +5,7 @@
     <h2 class="group-heading justified row">
       <span class="text-heading" ng-class="smallDeviceWidth && 'long'">starred notes</span>
     </h2>
-    <div class="animate-list-item-leave tall"
+    <div ng-attr-id="{{ note.trans.uuid }}" class="animate-list-item-leave tall"
       ng-repeat="note in getVisibleArray(getFullArray, currentListLimitTo) track by note.trans.uuid"
       list-item ng-include="urlBase + 'app/notes/noteListItem.html'"></div>
     <div list-prompt="notes" list-prompt-infos="listInfos"></div>
