--- a/frontend/app/src/static/app/lists/listNotes.html
+++ b/frontend/app/src/static/app/lists/listNotes.html
@@ -5,7 +5,7 @@
     <div list="getNotesArray('list', {uuid: list.trans.uuid, owner: overrideOwnerUUID})"
     list-open="openEditor('note', getNewNote({list: list}, overrideOwnerUUID), 'new')"
     list-options="{scrollParent: true}">
-      <div class="animate-list-item-leave tall"
+      <div ng-attr-id="{{ note.trans.uuid }}" class="animate-list-item-leave tall"
         ng-repeat="note in getVisibleArray(getFullArray, currentListLimitTo) track by note.trans.uuid"
         list-item ng-include="urlBase + 'app/notes/noteListItem.html'"></div>
       <div list-prompt="notes" list-prompt-infos="listInfos" list-prompt-disable-loading="childLists"></div>
@@ -18,7 +18,7 @@
           <span class="text-heading-primary text-downplayed" ng-bind="childList.trans.title"></span>
         </div>
       </div>
-      <div class="animate-list-item-leave tall"
+      <div ng-attr-id="{{ note.trans.uuid }}" class="animate-list-item-leave tall"
         ng-repeat="note in getVisibleArray(getFullArray, currentListLimitTo) track by note.trans.uuid"
         list-item ng-include="urlBase + 'app/notes/noteListItem.html'"></div>
       <div list-prompt="notes" list-prompt-infos="listInfos" list-prompt-disable-loading="true"></div>
