--- a/frontend/app/src/static/app/notes/notesAll.html
+++ b/frontend/app/src/static/app/notes/notesAll.html
@@ -3,7 +3,7 @@
 
     <div ng-show="isContentVisible('notes')">
       <h2 class="group-heading justified row">all notes</h2>
-      <div class="animate-list-item-leave tall"
+      <div ng-attr-id="{{ note.trans.uuid }}" class="animate-list-item-leave tall"
         ng-repeat="note in getVisibleArray(getFullArray, currentListLimitTo) track by note.trans.uuid"
         list-item ng-include="urlBase + 'app/notes/noteListItem.html'"></div>
       <div list-prompt="notes" list-prompt-infos="listInfos"></div>
