--- a/frontend/app/src/static/app/tasks/tasksAll.html
+++ b/frontend/app/src/static/app/tasks/tasksAll.html
@@ -11,7 +11,7 @@
     </div>
     <div list-item-add="getNewTask()"
       list-item-add-save="saveTask(newItem)" ng-include="urlBase + 'app/tasks/taskListItemAdd.html'"></div>
-    <div class="animate-list-item-leave"
+    <div ng-attr-id="{{ task.trans.uuid }}" class="animate-list-item-leave"
       ng-repeat="task in getVisibleArray(getFullArray, currentListLimitTo) track by task.trans.uuid"
       list-item ng-include="urlBase + 'app/tasks/taskListItem.html'">
     </div>
