--- a/frontend/app/src/static/app/notes/noteEditor.html
+++ b/frontend/app/src/static/app/notes/noteEditor.html
@@ -283,6 +283,22 @@
                   </a>
                 </div>
               </div>
+              <div ng-if="usePremiumFeatures()"
+                ng-repeat="keywordsFromCollective in getTagsArray('collectiveKeywords', {owner: note.trans.owner})">
+                <p class="row"><span class="text-heading-primary" ng-bind="keywordsFromCollective.name"></span><br/></p>
+                <div class="keywords-container row">
+                  <div class="keyword-wrapper"
+                    ng-repeat="keyword in keywordsFromCollective.array
+                    | keywordsFilter:{name:'byOtherThanNoteKeywords', item: note}
+                    | filter:newKeyword.trans.title
+                    | orderBy:'trans.title' track by keyword.trans.uuid">
+                    <a href class="keyword link" swiper-click="addKeywordToNote(note, keyword)" clamp=1>
+                      <span class="text-keyword" ng-bind="getKeywordFirstPart(keyword)"
+                        ng-class="hasKeywordSecondPart(keyword) && 'text-keyword-parent'"></span><span class="text-keyword" ng-if="hasKeywordSecondPart(keyword)" ng-bind="getKeywordSecondPart(keyword)"></span>
+                    </a>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
 
