--- a/frontend/app/src/static/app/tasks/tasksContext.html
+++ b/frontend/app/src/static/app/tasks/tasksContext.html
@@ -1,6 +1,6 @@
 <div class="container-content--outer" list-container>
   <section class="container-content">
-    <div list="DEBUGgetContextTasks(context)"
+    <div list="getTasksArray('context', {id: context && context.trans.uuid})"
     list-options="{hideItemDefault: true, scrollParent: true}">
       <div class="group-mixed heading vertically-centered">
         <div class="group-mixed--middle">
